--- a/views/actions.html
+++ b/views/actions.html
@@ -5,5 +5,6 @@
 </select>
 <button class="start button" type="button"></button>
 <button class="stop button" type="button"></button>
+<button id="copyToTomcat" type="button">Copy To Tomcat</button>
 <span class="divider"></span>
 <button class="clearConsole" type="button">Clear</button>
